# osrs_console

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/osrs_console/: __init__.py  __main__.py  app.py
src/osrs_console/screens/: calculator.py  home.py  prices.py  skills.py  wealth.py
src/osrs_console/utils/: api.py  calc.py  db.py  ge_api.py
src/osrs_console/utils/data/sql/: schema.sql  schema_ge.sql
src/osrs_console/widgets/: charts.py  stats.py
tests/: test_osrs_console.py
