[tool.poetry]
name = "osrs_console"
version = "0.1.0"
description = "A TUI application that features several invaluable utilities for your Old School Runescape Character."
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
