[tool.poetry]
name = "osrs_console"
version = "0.1.0"
description = "A TUI application that features several invaluable utilities for your Old School Runescape Character."
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^8.2.4"
requests = "^2.33.1"
python-dotenv = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^9.13.0"
textual-dev = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osrs-console = "osrs_console.app:main"